[package]
name = "spanish-numbers"
version = "0.1.2"
authors = ["Marcio Diaz <marcio.diaz@gmail.com>"]
description = "Convert integers to written Spanish number format"
keywords = ["spanish", "number", "convert", "format"]
license = "MIT"
repository = "https://github.com/marcio-diaz/spanish-numbers/"

[dependencies]
getopts = "0.2"